[package]
name = "my_parser_yaroslav_fetisov"
version = "0.1.1"
edition = "2021"
license = "MIT" 
description = "A short description of my package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
